<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_sort_by_category"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_sort_by_category"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_by_date"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_sort_by_date"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_sort_by_status"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_sort_by_status"
        app:showAsAction="never"/>
</menu>

