<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:id="@+id/activity_register"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical"
    tools:context=".feature.authenication.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        android:layout_marginTop="@dimen/dp40"
        android:background="@drawable/boder_title"
        android:orientation="vertical"
        android:padding="@dimen/dp10">

        <TextView
            android:id="@+id/text_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_register"
            android:textColor="@color/color_brown"
            android:textSize="@dimen/dp40"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:layout_weight="1"
                android:background="@color/color_mos"
                android:paddingLeft="@dimen/dp10"
                android:textColorHint="@color/color_brown"
                app:hintTextAppearance="@color/color_brown">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_first_name"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:layout_weight="1"
                android:background="@color/color_mos"
                android:paddingLeft="@dimen/dp10"
                android:textColorHint="@color/color_brown"
                app:hintTextAppearance="@color/color_brown">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_last_name"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@color/color_mos"
            android:paddingLeft="@dimen/dp10"
            android:textColorHint="@color/color_brown"
            app:hintTextAppearance="@color/color_brown">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_email"
                />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:layout_weight="1"
                android:background="@color/color_mos"
                android:paddingLeft="@dimen/dp10"
                android:textColorHint="@color/color_brown"
                app:hintTextAppearance="@color/color_brown">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp5"
                android:layout_weight="1"
                android:background="@color/color_mos"
                android:textColorHint="@color/color_brown"
                app:hintTextAppearance="@color/color_brown">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_confim_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_confirm_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@color/color_mos"
            android:paddingLeft="@dimen/dp10"
            android:textColorHint="@color/color_brown"
            app:hintTextAppearance="@color/color_brown">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_adress"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@color/color_mos"
            android:paddingLeft="@dimen/dp10"
            android:textColorHint="@color/color_brown"
            app:hintTextAppearance="@color/color_brown">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_role"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp5"
            android:background="@color/color_mos"
            android:paddingLeft="@dimen/dp10"
            android:textColorHint="@color/color_brown"
            app:hintTextAppearance="@color/color_brown">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_text_department"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_department"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        android:layout_marginTop="@dimen/dp20"
        android:background="@drawable/boder_title"
        android:drawableLeft="@drawable/ic_framgia"
        android:text="@string/action_create_account"
        android:textColor="@color/color_red_mos"/>
</LinearLayout>