<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="viewModel"
            type="com.framgia.fdms.screen.device.DeviceViewModel"
            />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_gray_blue"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boder_title"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/title_register_my_device"
                android:textColor="@color/color_brown"
                android:textSize="@dimen/dp30"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@drawable/boder_title"
                android:orientation="vertical"
                android:padding="@dimen/dp10"
                >
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:paddingTop="@dimen/dp10"
                    android:textColorHint="@color/color_brown"
                    app:hintTextAppearance="@color/color_brown"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_title_device"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_title"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:paddingTop="@dimen/dp10"
                    android:textColorHint="@color/color_brown"
                    app:hintTextAppearance="@color/color_brown"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_description_device"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_descriptions"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:paddingTop="@dimen/dp10"
                    android:textColorHint="@color/color_brown"
                    app:hintTextAppearance="@color/color_brown"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_name_device"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_device_name"
                        />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <Spinner
                        android:id="@+id/spiner_device"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp10"
                        android:background="@drawable/boder_title"
                        android:paddingTop="@dimen/dp10"
                        />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:paddingTop="@dimen/dp10"
                    android:textColorHint="@color/color_brown"
                    app:hintTextAppearance="@color/color_brown"
                    >
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/text_number_device"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title_number_of_devices"
                        />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginRight="@dimen/dp20"
                android:background="@drawable/boder_title"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp20"
                android:paddingTop="@dimen/dp30"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/boder_title"
                    android:drawableLeft="@drawable/ic_framgia"
                    android:onClick="@{() -> viewModel.onCreateDeviceClick()}"
                    android:text="@string/action_register"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>
