<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data class="DetailDataBinding">

        <variable
            name="item"
            type="com.framgia.fdms.data.model.Device"
            />
        <variable
            name="viewModel"
            type="com.framgia.fdms.screen.detail.DetailViewModel"
            />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp3"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/image_detail_device"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp200"
            android:adjustViewBounds="true"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_name_device"
                android:textSize="@dimen/dp15"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.name}"
                android:textSize="@dimen/dp15"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_category"
                android:textSize="@dimen/dp15"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.category}"
                android:textSize="@dimen/dp15"
                android:textStyle="bold"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_description"
                android:textSize="@dimen/dp15"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.description}"
                android:textSize="@dimen/dp15"
                android:textStyle="bold"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/title_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</layout>
