<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="viewModel"
            type="com.framgia.fdms.screen.profile.export.ExportViewModel"
            />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_10"
        android:minWidth="@dimen/dp_300"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/title_export"
            android:textColor="@color/color_black_transprarent"
            android:textSize="@dimen/sp_17"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_30"
            android:onClick="@{() -> viewModel.exportPdf()}"
            >
            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_picture_as_pdf_black_24px"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_30"
                android:gravity="center_vertical"
                android:text="@string/title_pdf"
                android:textColor="@color/color_black_transprarent"
                android:textSize="@dimen/sp_15"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            >
            <ImageView
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/ic_wb_auto_black_24px"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_30"
                android:gravity="center_vertical"
                android:text="@string/title_word"
                android:textColor="@color/color_black_transprarent"
                android:textSize="@dimen/sp_15"
                />
        </LinearLayout>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/mdtp_cancel"
            android:textAllCaps="true"
            style="@style/Widget.AppCompat.Button.Borderless"
            />
    </LinearLayout>

</layout>
